# faiss-node-native

./: .coderabbit.yml  .dockerignore  .env.example  .gitignore  .npmignore  API.md  CMakeLists.txt  CODERABBIT_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  Doxyfile  PHASE3_COMPLETE.md  PHASE3_SETUP.md  PUBLISHING_GUIDE.md  QUICK_PUBLISH.md  README.md  REDDIT_POST.md  REDDIT_POST.txt  TEST_RESULTS.md  TEST_RESULTS_DOCKER.md  WINDOWS.md  binding.gyp  docker-compose.yml  funding.json  jest.ci.config.js  jest.config.js  package-lock.json  package.json  tsconfig.json  typedoc.json
.devcontainer/: devcontainer.json
.github/: DOCS_AUTOMATION.md  FUNDING.yml  MONITORING.md  NPM_PUBLISHING.md  PAGES_SETUP.md  RELEASE_GUIDE.md  WORKFLOW_FIXES.md  dependabot.yml
.github/workflows/: build-release.yml  ci.yml  codeql.yml  coderabbit.yml  docker.yml  docs-auto.yml  docs-manual.yml  docs.yml  nightly.yml  test-local-build.sh  test-validation.yml  (+1 more)
docs/: README.md  integration-recipes.md  vector-search-concepts.md
examples/: audio-similarity.js  basic-search.js  benchmark.js  binary-search.js  cli-workflow.sh  express-search-api.js  fastify-search-api.js  graphql-search.js  image-similarity.js  postgres-pgvector-sync.js  rag-pipeline.js  save-load.js  semantic-search-openai.js  test-realistic-data.sh  user-recommendations.js  vercel-serverless-search.js
scripts/: auto-docs.sh  blackfire-profile.js  check-ci-status.sh  clear-custom-domains.sh  find-custom-domain-repo.sh
test-install/: README.md  package-lock.json  package.json  test.js
(+59 files in other folders)
